# externalio

./: README.md  pyproject.toml
externalio/: __init__.py  core.py
